--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -40,3 +40,8 @@ jobs:
         tar -xf sde.tar.bz2
         mv sde-external-8.63.0-2021-01-18-lin/ sde/
         tree
+
+    - name: Test
+      if: always()
+      run: |
+        perl lib/Nasm/X86.pm
