--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,4 @@
-# Test NasmX86 2021-05-15 at 01:27:32
+# Test NasmX86 2021-05-15 at 01:30:47
 
 name: Test
 
@@ -53,74 +53,88 @@ jobs:
 
     - name: Prove
       run: |
-        prove -Ilib
+        #prove -Ilib
 
     - name: Prove /home/phil/perl/cpan/NasmX86/t/1.t
+      if: always()
       run: |
         cat /home/phil/perl/cpan/NasmX86/t/1.t
         prove -Ilib /home/phil/perl/cpan/NasmX86/t/1.t
 
     - name: Prove /home/phil/perl/cpan/NasmX86/t/10.t
+      if: always()
       run: |
         cat /home/phil/perl/cpan/NasmX86/t/10.t
         prove -Ilib /home/phil/perl/cpan/NasmX86/t/10.t
 
     - name: Prove /home/phil/perl/cpan/NasmX86/t/11.t
+      if: always()
       run: |
         cat /home/phil/perl/cpan/NasmX86/t/11.t
         prove -Ilib /home/phil/perl/cpan/NasmX86/t/11.t
 
     - name: Prove /home/phil/perl/cpan/NasmX86/t/12.t
+      if: always()
       run: |
         cat /home/phil/perl/cpan/NasmX86/t/12.t
         prove -Ilib /home/phil/perl/cpan/NasmX86/t/12.t
 
     - name: Prove /home/phil/perl/cpan/NasmX86/t/13.t
+      if: always()
       run: |
         cat /home/phil/perl/cpan/NasmX86/t/13.t
         prove -Ilib /home/phil/perl/cpan/NasmX86/t/13.t
 
     - name: Prove /home/phil/perl/cpan/NasmX86/t/2.t
+      if: always()
       run: |
         cat /home/phil/perl/cpan/NasmX86/t/2.t
         prove -Ilib /home/phil/perl/cpan/NasmX86/t/2.t
 
     - name: Prove /home/phil/perl/cpan/NasmX86/t/3.t
+      if: always()
       run: |
         cat /home/phil/perl/cpan/NasmX86/t/3.t
         prove -Ilib /home/phil/perl/cpan/NasmX86/t/3.t
 
     - name: Prove /home/phil/perl/cpan/NasmX86/t/4.t
+      if: always()
       run: |
         cat /home/phil/perl/cpan/NasmX86/t/4.t
         prove -Ilib /home/phil/perl/cpan/NasmX86/t/4.t
 
     - name: Prove /home/phil/perl/cpan/NasmX86/t/5.t
+      if: always()
       run: |
         cat /home/phil/perl/cpan/NasmX86/t/5.t
         prove -Ilib /home/phil/perl/cpan/NasmX86/t/5.t
 
     - name: Prove /home/phil/perl/cpan/NasmX86/t/6.t
+      if: always()
       run: |
         cat /home/phil/perl/cpan/NasmX86/t/6.t
         prove -Ilib /home/phil/perl/cpan/NasmX86/t/6.t
 
     - name: Prove /home/phil/perl/cpan/NasmX86/t/7.t
+      if: always()
       run: |
         cat /home/phil/perl/cpan/NasmX86/t/7.t
         prove -Ilib /home/phil/perl/cpan/NasmX86/t/7.t
 
     - name: Prove /home/phil/perl/cpan/NasmX86/t/8.t
+      if: always()
       run: |
         cat /home/phil/perl/cpan/NasmX86/t/8.t
         prove -Ilib /home/phil/perl/cpan/NasmX86/t/8.t
 
     - name: Prove /home/phil/perl/cpan/NasmX86/t/9.t
+      if: always()
       run: |
         cat /home/phil/perl/cpan/NasmX86/t/9.t
         prove -Ilib /home/phil/perl/cpan/NasmX86/t/9.t
 
     - name: Prove /home/phil/perl/cpan/NasmX86/t/z.txt
+      if: always()
       run: |
         cat /home/phil/perl/cpan/NasmX86/t/z.txt
         prove -Ilib /home/phil/perl/cpan/NasmX86/t/z.txt
