--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,4 @@
-# Test NasmX86 2021-05-21 at 00:05:35
+# Test NasmX86 2021-05-21 at 00:06:49
 
 name: Test
 
@@ -53,7 +53,7 @@ jobs:
       run: |
         perl lib/Nasm/X86.pm
 
-    - name: Prove t/1.t
+#    - name: Prove t/1.t
       if: always()
       run: |
         prove -Ilib t/1.t
